--- a/ts/regex/tsconfig.json
+++ b/ts/regex/tsconfig.json
@@ -6,8 +6,13 @@
             "ES6",
             "dom"
         ],
+        "skipLibCheck": true,
         "rootDir": "src",
-        "outDir": "lib"
+        "outDir": "lib",
+        "types": [
+			"node",
+			"jest"
+		]
     },
     "include": [
         "src"
