Fix service name
Signed-off-by: Roman Nikitenko <rnikiten@redhat.com>

--- a/kubernetes/external-scoped-service-declaration.yaml
+++ b/kubernetes/external-scoped-service-declaration.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-declaration
+  name: external-scoped-service-declaration
 spec:
   type: NodePort
   ports: 
