--- a/ts/console/package.json
+++ b/ts/console/package.json
@@ -10,8 +10,13 @@
   "bugs": {
     "url": "https://github.com/RomanNikitenko/ts-example/issues"
   },
+  "scripts": {
+    "compile": "tsc -b",
+    "test:console": "yarn compile && node lib/console"
+  },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^16.11.2"
+    "@types/node": "^16.11.2",
+    "typescript": "~4.4.2"
   }
 }
