Test github tokens extracting from a file
Signed-off-by: Roman Nikitenko <rnikiten@redhat.com>

--- a/ts/console/package.json
+++ b/ts/console/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "compile": "tsc -b",
-    "test:console": "yarn compile && node lib/console"
+    "test:console": "yarn compile && node lib/console",
+    "test:read-tokens": "yarn compile && node lib/readfile"
   },
   "dependencies": {},
   "devDependencies": {
